--- a/src/main/resources/index.ejs
+++ b/src/main/resources/index.ejs
@@ -4,11 +4,5 @@
     <meta charset="UTF-8">
     <title>kjs-chunks</title>
 </head>
-<body>
-<!--
-While it reads kjs-chunks.js it actually loads /build/js/packages/kjs-chunks/kjs-chunks-index.js
-because we've changed the entry in /webpack.config.d/entry.js
--->
-<script src="kjs-chunks.js"></script>
-</body>
+<body></body>
 </html>
